# pokemon-tcg-companion

./: LICENSE.md  README.md  prefect.yaml
backend/pokemon-tcg-companion/: .editorconfig  .envrc.example  .envrc.prod.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Procfile  alembic.ini  docker-compose.yml  flows.py  fly.toml  lifespan.py  main.py  openapi.py  pyproject.toml  pytest.toml  requirements.txt
backend/pokemon-tcg-companion/alembic/: env.py  script.py.mako
backend/pokemon-tcg-companion/alembic/versions/: 04b530f5d463_ref_card_make_image_optional_tcg_id_.py  2adf5d447517_add_card_model.py  75518cffa3bd_add_card_ref_card_model.py  84c8c29e1fd8_add_user_id_and_make_card_fields_.py  94be8bedf4cf_add_matching_status_to_card.py  954ae5a88351_enable_pg_trgm_and_add_name_gin_index.py  b5a0996ee504_add_set_year_to_refcard.py  e6ef42a47d89_add_tcgset_table_and_migrate_refcard_.py
backend/pokemon-tcg-companion/cards/application/agents/: __init__.py  card_matcher.py  card_metadata_extractor.py  ref_card_matcher.py
backend/pokemon-tcg-companion/cards/application/services/: __init__.py  card.py  ref_card.py  tcg_set.py
backend/pokemon-tcg-companion/cards/domain/models/: __init__.py  card.py  ref_card.py  tcg_set.py
backend/pokemon-tcg-companion/cards/domain/repositories/: __init__.py  card.py  ref_card.py  tcg_set.py
backend/pokemon-tcg-companion/cards/infrastructure/flows/: match_card.py
backend/pokemon-tcg-companion/cards/infrastructure/repositories/: __init__.py  card.py  ref_card.py  tcg_set.py
backend/pokemon-tcg-companion/cards/interface/api/: __init__.py  cards.py  sync.py  webhooks.py
backend/pokemon-tcg-companion/core/: auth.py  db.py  flows.py  gcp.py  logfire.py  pubsub_model.py  rrf.py  settings.py
backend/pokemon-tcg-companion/core/settings/: agents.py  app.py  db.py  prefect.py
backend/pokemon-tcg-companion/pubsub-emulator/: Dockerfile
backend/pokemon-tcg-companion/scripts/: create_topic_sub.py  generate_openapi.py  init-db.sql  populate_ref_cards.py  serve_flows.py  set_bucket_cors.py
backend/pokemon-tcg-companion/tests/: conftest.py
backend/pokemon-tcg-companion/tests/cards/: conftest.py
backend/pokemon-tcg-companion/tests/cards/application/services/: test_card.py  test_ref_card.py  test_tcg_set.py
backend/pokemon-tcg-companion/tests/cards/interface/api/: test_cards.py
backend/pokemon-tcg-companion/tests/utils/: mocks.py  pubsub.py
webapp/: .env.local.example  .env.prod.example  .gitignore  .prettierignore  CLAUDE.md  eslint.config.mjs  package.json  pnpm-lock.yaml
webapp/.husky/: pre-commit
webapp/app/: layout.tsx  page.tsx
webapp/components/: app-sidebar.tsx  nav-user.tsx  (+1 more)
(+20 files in other folders)
